# fyt-data-mgmt

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run-web-gui.ps1  run-web.ps1  setup-modern.ps1  web_control_gui.py  web_server.py
assets/: _gen_logo.py
core/: __init__.py  arrival_core.py  attendance_core.py  common_core.py  compare_core.py  currency_core.py  delivery_core.py  excel_tools_core.py  header_detect.py  incremental_cache.py  invoice_core.py  library.py  mapping_store.py  paths.py  pdf_core.py  pivot_core.py  preview_core.py  purchase_core.py  reconcile_core.py  rename_core.py  settings.py  shape_detect.py  storage_lock.py  task_history.py  tauri_bridge.py  template_store.py  text_core.py  updater.py  version.py
docs/: 项目全景-模块与实现.md
packaging/: app.spec  installer.iss  make_version_info.py  tauri_bridge.spec  tauri_bridge_entry.py  version_info.txt
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tests/: __init__.py  sample_data.py  test_arrival_sheetpick.py  test_audit_fixes.py  test_bad_dimension.py  test_common_core.py  test_compare.py  test_currency_core.py  test_delivery_headers.py  test_header_detect.py  test_incremental_cache.py  test_integration.py  test_invoice_parsers.py  test_large_workbooks.py  test_library_classify.py  test_mapping_store.py  test_paths.py  test_pdf_core.py  test_preview_core.py  test_progress.py  test_rename_core.py  test_shape_detect.py  (+10 more)
(+70 files in other folders)
