[package]
name = "fyt-data-mgmt-tauri"
version = "1.3.0"
description = "峰运通数据管理系统 Tauri 前端"
authors = ["KuroNeko-night"]
edition = "2021"

[lib]
name = "fyt_data_mgmt_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
